templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
